<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="300dip"
	android:layout_height="250dip">

	<TableLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip"
		android:layout_marginLeft="7dip">

		<EditText
			android:id="@+id/message"
			android:hint="@string/reportHintCaption"
			android:lines="10"
			android:layout_marginBottom="5dip"
			android:layout_width="280dip"
			android:layout_height="180dip"
			android:background="@drawable/bg_round_box1"></EditText>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button
				android:id="@+id/send"
				android:text="@string/reportSendCaption"
				android:layout_width="140dip"
				android:layout_height="wrap_content"></Button>
			<Button
				android:id="@+id/cancel"
				android:text="@string/reportCancelCaption"
				android:layout_width="140dip"
				android:layout_height="wrap_content"></Button>
		</LinearLayout>

	</TableLayout>
</LinearLayout>